# mace

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  Mace Language Spec RFC.md  README.md  go.mod  go.sum  mace-spec.md  mace.ebnf  todo.md
.github/workflows/: ci.yml  go-test.yml  golangci-lint.yml  release-bindings.yml  release-zed-extension.yml  release.yml
binding/: pkg.go  pkg_test.go
bindings/node/: README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vite.config.ts
bindings/python/: README.md  pyproject.toml
bindings/python/src/mace_python/: __init__.py  _client.py
cmd/: check.go  import_convert.go  import_test.go  lsp.go  lsp_server.go  lsp_server_test.go  lsp_test.go  main.go  root.go  root_test.go
cmd/mace/: root.go  root_test.go
codec/: check.go  coverage_test.go  pkg.go  pkg_test.go
examples/docs/: data_payload.mace  public_contract.mace
fixtures/: arrays.mace  primitives.mace  records.mace  unions.mace  variants.mace
fixtures/diagnostics/: circular-import-a.mace  circular-import-b.mace  duplicate-declaration.mace  duplicate-import.mace  gen-doc-invalid-target.mace  output-inline-doc-rejects-interpolation.mace  output-inline-doc-requires-directive-list.mace  schema-doc-duplicate-keys.mace  schema-doc-invalid-target.mace  schema-doc-scalar-target.mace  type-mismatch.mace  unknown-type.mace
fixtures/unicode/: theme.mace  (+6 more)
formatter/: pkg.go  pkg_test.go
lexer/: lexer.go  pkg.go  pkg_test.go  tokens.go
parser/: parser.go  pkg.go  pkg_test.go
processor/: pkg.go  pkg_test.go
tree-sitter-mace/: grammar.js
(+133 files in other folders)
